fixes overflowing article content in IE11

--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -1,29 +1,27 @@
 @import '../../global';
 
 .article-wrapper {
-  max-width: 100%; 
-  
   h2 { font-size: 24px; }
   h3 { font-size: 20px; }
   code { color: $gray600; }
-  
+
   h2, h3 {
     padding-top: 16px;
   }
-  
+
   pre, code {
     background: #f4f4f4;
   }
-  
-  pre { 
-    overflow-y: scroll ; 
+
+  pre {
+    overflow-y: scroll ;
     line-height: 1.5;
   }
 
   ul, ol {
     display: block;
     padding-left: 22px;
-    
+
     li {
       margin-bottom: $global-space;
     }
